# flightlab-rl

./: .coverage 2  .gitignore  .ruff.toml  README.md  pyproject.toml  pytest.ini  sitecustomize.py
apps/mission-control/: README.md  docker-compose.yml  run.py
apps/mission-control/api/: Dockerfile  requirements.txt
apps/mission-control/config/: controllers.yaml
apps/mission-control/web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
artifacts/training_plots/compare_seed42/: ppo_vs_sac_manifest.json
artifacts/training_plots/ppo_seed42/: ppo_training_manifest.json
artifacts/training_plots/sac_seed42/: sac_training_manifest.json
configs/aircraft/: trainer.yaml
configs/missions/: traffic_pattern.yaml
configs/tasks/: flight_plan.yaml  landing.yaml  takeoff.yaml
configs/training/: ppo.yaml  sac.yaml
configs/weather/: calm.yaml
configs/world/: default_runway.yaml
flightlab/: __init__.py
scripts/: _bootstrap.py  benchmark.py  eval.py  export_replay.py  play.py  render_policy.py  render_replay.py  train.py
src/flightlab/: __init__.py
src/flightlab/controllers/: __init__.py  pid.py
src/flightlab/core/: __init__.py  geometry.py  seed.py  time.py  types.py  units.py
src/flightlab/dynamics/: __init__.py  base.py  jsbsim_adapter.py  (+1 more)
tests/: conftest.py
tests/integration/: test_env_api.py
tests/regression/: test_deterministic_rollouts.py
tests/unit/: test_controllers_metrics_rl.py  test_core.py  test_dynamics_sensors_render.py  test_tasks.py  test_world_guidance_utils.py
(+65 files in other folders)
